update analise dados

--- a/src/notebook/Limpeza_dados.ipynb
+++ b/src/notebook/Limpeza_dados.ipynb
@@ -381,7 +381,7 @@
    "id": "863cddcb",
    "metadata": {},
    "source": [
-    "Estatísticas básicas de variáveis numéricas"
+    "Estatísticas básicas de variáveis numéricas. Como podemos observar, há propriedade com Bedroom2, Bathroom, Landsize e BuildingArea iguais a zero, o que não faz sentido, logo serão excluídas."
    ]
   },
   {
@@ -665,6 +665,30 @@
    "source": [
     "## Preprocessamento"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "68719195",
+   "metadata": {},
+   "source": [
+    "### Lidando com valores inconsistentes"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f2255d27",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f9dff5a6",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
