adicionando etapas em limpeza de dados

--- a/src/notebook/Limpeza_dados.ipynb
+++ b/src/notebook/Limpeza_dados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "b0fdd5db",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "2fb59d0a",
    "metadata": {},
    "outputs": [],
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "b3a6733b",
    "metadata": {},
    "outputs": [
@@ -57,7 +57,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -104,7 +104,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "de590ff1",
    "metadata": {
     "scrolled": true
@@ -156,124 +156,124 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>30041</th>\n",
-       "      <td>Ashburton</td>\n",
-       "      <td>11 Duke St</td>\n",
-       "      <td>5</td>\n",
+       "      <th>20636</th>\n",
+       "      <td>Kew East</td>\n",
+       "      <td>11 Coleman Av</td>\n",
+       "      <td>4</td>\n",
        "      <td>h</td>\n",
-       "      <td>1930000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>J</td>\n",
-       "      <td>9/12/2017</td>\n",
-       "      <td>10.2</td>\n",
-       "      <td>3147.0</td>\n",
+       "      <td>2000000.0</td>\n",
+       "      <td>VB</td>\n",
+       "      <td>Marshall</td>\n",
+       "      <td>9/09/2017</td>\n",
+       "      <td>7.3</td>\n",
+       "      <td>3102.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>672.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>704.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>Boroondara City Council</td>\n",
-       "      <td>-37.86073</td>\n",
-       "      <td>145.07758</td>\n",
+       "      <td>-37.79349</td>\n",
+       "      <td>145.04611</td>\n",
        "      <td>Southern Metropolitan</td>\n",
-       "      <td>3052.0</td>\n",
+       "      <td>2671.0</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>33442</th>\n",
-       "      <td>Ivanhoe</td>\n",
-       "      <td>3/61 Beatty St</td>\n",
+       "      <th>9417</th>\n",
+       "      <td>Southbank</td>\n",
+       "      <td>909/118 Kavanagh St</td>\n",
        "      <td>2</td>\n",
        "      <td>u</td>\n",
-       "      <td>730000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Miles</td>\n",
-       "      <td>17/03/2018</td>\n",
-       "      <td>7.8</td>\n",
-       "      <td>3079.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Banyule City Council</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Eastern Metropolitan</td>\n",
-       "      <td>5549.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>11711</th>\n",
-       "      <td>Ormond</td>\n",
-       "      <td>16 Sherwood St</td>\n",
-       "      <td>3</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1535000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Marshall</td>\n",
-       "      <td>15/10/2016</td>\n",
-       "      <td>11.8</td>\n",
-       "      <td>3204.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>578.0</td>\n",
-       "      <td>140.0</td>\n",
-       "      <td>1935.0</td>\n",
-       "      <td>Glen Eira City Council</td>\n",
-       "      <td>-37.90470</td>\n",
-       "      <td>145.02740</td>\n",
-       "      <td>Southern Metropolitan</td>\n",
-       "      <td>3578.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>25033</th>\n",
-       "      <td>Eltham</td>\n",
-       "      <td>6 Lamorna Ct</td>\n",
-       "      <td>5</td>\n",
-       "      <td>h</td>\n",
-       "      <td>1020000.0</td>\n",
-       "      <td>S</td>\n",
-       "      <td>Jellis</td>\n",
-       "      <td>21/10/2017</td>\n",
-       "      <td>18.0</td>\n",
-       "      <td>3095.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Banyule City Council</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>Eastern Metropolitan</td>\n",
-       "      <td>6990.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>22733</th>\n",
-       "      <td>Richmond</td>\n",
-       "      <td>17/9 Tennyson St</td>\n",
-       "      <td>2</td>\n",
-       "      <td>u</td>\n",
-       "      <td>702000.0</td>\n",
-       "      <td>S</td>\n",
+       "      <td>430000.0</td>\n",
+       "      <td>PI</td>\n",
        "      <td>Dingle</td>\n",
-       "      <td>23/09/2017</td>\n",
-       "      <td>2.4</td>\n",
-       "      <td>3121.0</td>\n",
+       "      <td>12/11/2016</td>\n",
+       "      <td>1.2</td>\n",
+       "      <td>3006.0</td>\n",
        "      <td>...</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>2295.0</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>77.0</td>\n",
-       "      <td>2004.0</td>\n",
-       "      <td>Yarra City Council</td>\n",
-       "      <td>-37.82399</td>\n",
-       "      <td>144.99181</td>\n",
+       "      <td>2014.0</td>\n",
+       "      <td>Melbourne City Council</td>\n",
+       "      <td>-37.82560</td>\n",
+       "      <td>144.96220</td>\n",
+       "      <td>Southern Metropolitan</td>\n",
+       "      <td>8400.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>27909</th>\n",
+       "      <td>Kew</td>\n",
+       "      <td>3/13 Kent St</td>\n",
+       "      <td>2</td>\n",
+       "      <td>t</td>\n",
+       "      <td>820000.0</td>\n",
+       "      <td>VB</td>\n",
+       "      <td>Nelson</td>\n",
+       "      <td>18/11/2017</td>\n",
+       "      <td>5.4</td>\n",
+       "      <td>3101.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Boroondara City Council</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Southern Metropolitan</td>\n",
+       "      <td>10331.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>771</th>\n",
+       "      <td>Avondale Heights</td>\n",
+       "      <td>40 Templewood Cr</td>\n",
+       "      <td>4</td>\n",
+       "      <td>h</td>\n",
+       "      <td>1200000.0</td>\n",
+       "      <td>S</td>\n",
+       "      <td>Nelson</td>\n",
+       "      <td>10/12/2016</td>\n",
+       "      <td>10.5</td>\n",
+       "      <td>3034.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Moonee Valley City Council</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Western Metropolitan</td>\n",
+       "      <td>4502.0</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>15550</th>\n",
+       "      <td>Coburg</td>\n",
+       "      <td>82 Ross St</td>\n",
+       "      <td>3</td>\n",
+       "      <td>t</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>SN</td>\n",
+       "      <td>Barry</td>\n",
+       "      <td>17/06/2017</td>\n",
+       "      <td>6.7</td>\n",
+       "      <td>3058.0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Darebin City Council</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>Northern Metropolitan</td>\n",
-       "      <td>14949.0</td>\n",
+       "      <td>11204.0</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -281,38 +281,38 @@
        "</div>"
       ],
       "text/plain": [
-       "          Suburb           Address  Rooms Type      Price Method   SellerG  \\\n",
-       "30041  Ashburton        11 Duke St      5    h  1930000.0      S         J   \n",
-       "33442    Ivanhoe    3/61 Beatty St      2    u   730000.0      S     Miles   \n",
-       "11711     Ormond    16 Sherwood St      3    h  1535000.0      S  Marshall   \n",
-       "25033     Eltham      6 Lamorna Ct      5    h  1020000.0      S    Jellis   \n",
-       "22733   Richmond  17/9 Tennyson St      2    u   702000.0      S    Dingle   \n",
+       "                 Suburb              Address  Rooms Type      Price Method  \\\n",
+       "20636          Kew East        11 Coleman Av      4    h  2000000.0     VB   \n",
+       "9417          Southbank  909/118 Kavanagh St      2    u   430000.0     PI   \n",
+       "27909               Kew         3/13 Kent St      2    t   820000.0     VB   \n",
+       "771    Avondale Heights     40 Templewood Cr      4    h  1200000.0      S   \n",
+       "15550            Coburg           82 Ross St      3    t        NaN     SN   \n",
        "\n",
-       "             Date  Distance  Postcode  ...  Bathroom  Car  Landsize  \\\n",
-       "30041   9/12/2017      10.2    3147.0  ...       3.0  1.0     672.0   \n",
-       "33442  17/03/2018       7.8    3079.0  ...       NaN  NaN       NaN   \n",
-       "11711  15/10/2016      11.8    3204.0  ...       1.0  2.0     578.0   \n",
-       "25033  21/10/2017      18.0    3095.0  ...       NaN  NaN       NaN   \n",
-       "22733  23/09/2017       2.4    3121.0  ...       1.0  1.0       NaN   \n",
+       "        SellerG        Date  Distance  Postcode  ...  Bathroom  Car  Landsize  \\\n",
+       "20636  Marshall   9/09/2017       7.3    3102.0  ...       1.0  1.0     704.0   \n",
+       "9417     Dingle  12/11/2016       1.2    3006.0  ...       2.0  0.0    2295.0   \n",
+       "27909    Nelson  18/11/2017       5.4    3101.0  ...       NaN  NaN       NaN   \n",
+       "771      Nelson  10/12/2016      10.5    3034.0  ...       NaN  NaN       NaN   \n",
+       "15550     Barry  17/06/2017       6.7    3058.0  ...       NaN  NaN       NaN   \n",
        "\n",
-       "       BuildingArea  YearBuilt              CouncilArea Lattitude  Longtitude  \\\n",
-       "30041           NaN        NaN  Boroondara City Council -37.86073   145.07758   \n",
-       "33442           NaN        NaN     Banyule City Council       NaN         NaN   \n",
-       "11711         140.0     1935.0   Glen Eira City Council -37.90470   145.02740   \n",
-       "25033           NaN        NaN     Banyule City Council       NaN         NaN   \n",
-       "22733          77.0     2004.0       Yarra City Council -37.82399   144.99181   \n",
+       "       BuildingArea  YearBuilt                 CouncilArea Lattitude  \\\n",
+       "20636           NaN        NaN     Boroondara City Council -37.79349   \n",
+       "9417            NaN     2014.0      Melbourne City Council -37.82560   \n",
+       "27909           NaN        NaN     Boroondara City Council       NaN   \n",
+       "771             NaN        NaN  Moonee Valley City Council       NaN   \n",
+       "15550           NaN        NaN        Darebin City Council       NaN   \n",
        "\n",
-       "                  Regionname Propertycount  \n",
-       "30041  Southern Metropolitan        3052.0  \n",
-       "33442   Eastern Metropolitan        5549.0  \n",
-       "11711  Southern Metropolitan        3578.0  \n",
-       "25033   Eastern Metropolitan        6990.0  \n",
-       "22733  Northern Metropolitan       14949.0  \n",
+       "       Longtitude             Regionname Propertycount  \n",
+       "20636   145.04611  Southern Metropolitan        2671.0  \n",
+       "9417    144.96220  Southern Metropolitan        8400.0  \n",
+       "27909         NaN  Southern Metropolitan       10331.0  \n",
+       "771           NaN   Western Metropolitan        4502.0  \n",
+       "15550         NaN  Northern Metropolitan       11204.0  \n",
        "\n",
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -331,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "61f5b6f6",
    "metadata": {
     "scrolled": false
@@ -386,7 +386,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "cc28ca67",
    "metadata": {},
    "outputs": [
@@ -591,7 +591,7 @@
        "max      -37.390200    145.526350   21650.000000  "
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -610,7 +610,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "82c06189",
    "metadata": {
     "scrolled": false
@@ -643,7 +643,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -668,7 +668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "68719195",
+   "id": "2cdfdb66",
    "metadata": {},
    "source": [
     "### Lidando com valores inconsistentes"
@@ -676,16 +676,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "f2255d27",
+   "execution_count": 18,
+   "id": "86b89b7c",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        False\n",
+       "1        False\n",
+       "2        False\n",
+       "3         True\n",
+       "4        False\n",
+       "         ...  \n",
+       "34852    False\n",
+       "34853    False\n",
+       "34854    False\n",
+       "34855    False\n",
+       "34856    False\n",
+       "Length: 34857, dtype: bool"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "(df[['Bedroom2', 'Bathroom', 'Landsize', 'BuildingArea']] == 0).any(axis = 1)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "f9dff5a6",
+   "id": "8fb71212",
    "metadata": {},
    "outputs": [],
    "source": []
