--- a/src/notebook/Limpeza_dados.ipynb
+++ b/src/notebook/Limpeza_dados.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 1,
    "id": "b0fdd5db",
    "metadata": {},
    "outputs": [],
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 2,
    "id": "2fb59d0a",
    "metadata": {},
    "outputs": [],
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 3,
    "id": "b3a6733b",
    "metadata": {},
    "outputs": [
@@ -58,7 +58,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 4,
    "id": "de590ff1",
    "metadata": {
     "scrolled": false
@@ -313,7 +313,7 @@
        "[5 rows x 21 columns]"
       ]
      },
-     "execution_count": 50,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 5,
    "id": "63572113",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "(34857, 21)"
       ]
      },
-     "execution_count": 58,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "61f5b6f6",
    "metadata": {
     "scrolled": false
@@ -408,7 +408,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 7,
    "id": "cc28ca67",
    "metadata": {},
    "outputs": [
@@ -623,13 +623,34 @@
        "Propertycount    4385.00000    6763.0000  1.041200e+04  2.165000e+04  "
       ]
      },
-     "execution_count": 51,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "df.describe().T"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "7085dae0",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['h', 'u', 't'], dtype=object)"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df['Type'].unique()"
    ]
   },
   {
@@ -642,7 +663,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 9,
    "id": "5cd23634",
    "metadata": {},
    "outputs": [
@@ -673,7 +694,7 @@
        "dtype: float64"
       ]
      },
-     "execution_count": 56,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -684,7 +705,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 10,
    "id": "82c06189",
    "metadata": {
     "scrolled": false
@@ -850,7 +871,7 @@
        "Propertycount  float64          3"
       ]
      },
-     "execution_count": 57,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 11,
    "id": "0a6c0e0b",
    "metadata": {},
    "outputs": [],
@@ -917,7 +938,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 12,
    "id": "4fdd8f50",
    "metadata": {},
    "outputs": [
@@ -930,7 +951,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +972,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "id": "70e8f30b",
    "metadata": {},
    "outputs": [],
@@ -969,7 +990,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "7d65ec74",
    "metadata": {
     "scrolled": true
@@ -1065,7 +1086,7 @@
        "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1084,7 +1105,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 15,
    "id": "bd9bf046",
    "metadata": {
     "scrolled": false
@@ -1196,7 +1217,7 @@
        "[484 rows x 1 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1215,7 +1236,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 16,
    "id": "5e47c60b",
    "metadata": {},
    "outputs": [
@@ -1309,7 +1330,7 @@
        "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1328,7 +1349,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "id": "9adf20ff",
    "metadata": {},
    "outputs": [
@@ -1702,7 +1723,7 @@
        "[168 rows x 21 columns]"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1721,7 +1742,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 18,
    "id": "6298e77e",
    "metadata": {},
    "outputs": [
@@ -1731,7 +1752,7 @@
        "array([12.4, 13.1])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1742,7 +1763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 19,
    "id": "e4df68d3",
    "metadata": {
     "scrolled": true
@@ -1778,7 +1799,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 20,
    "id": "4f4f2957",
    "metadata": {},
    "outputs": [
@@ -1872,7 +1893,7 @@
        "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1883,7 +1904,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 21,
    "id": "f7fb4575",
    "metadata": {},
    "outputs": [
@@ -1893,7 +1914,7 @@
        "array([3060.])"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1904,7 +1925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 22,
    "id": "47d54318",
    "metadata": {
     "scrolled": true
@@ -1940,7 +1961,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 23,
    "id": "881c7fe5",
    "metadata": {},
    "outputs": [
@@ -1970,7 +1991,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 24,
    "id": "6bd0de68",
    "metadata": {},
    "outputs": [],
@@ -1980,7 +2001,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "id": "25bee552",
    "metadata": {},
    "outputs": [],
@@ -2005,7 +2026,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "id": "02f1a97a",
    "metadata": {},
    "outputs": [],
@@ -2016,7 +2037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 27,
    "id": "97a124a0",
    "metadata": {
     "scrolled": false
@@ -2029,7 +2050,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 28,
    "id": "b88b6028",
    "metadata": {
     "scrolled": false
@@ -2049,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 29,
    "id": "702155e8",
    "metadata": {
     "scrolled": true
@@ -2185,7 +2206,7 @@
        "29483           NaN        NaN         NaN        NaN            NaN  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2196,7 +2217,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "ef98b445",
    "metadata": {},
    "outputs": [
@@ -2242,7 +2263,7 @@
        "0  Maribyrnong City Council  Western Metropolitan         7570.0"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2253,7 +2274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 31,
    "id": "aa04aeb5",
    "metadata": {},
    "outputs": [
@@ -2299,7 +2320,7 @@
        "0  Boroondara City Council  Southern Metropolitan         8920.0"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2310,7 +2331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 32,
    "id": "8f903bd3",
    "metadata": {},
    "outputs": [
@@ -2356,7 +2377,7 @@
        "0  Hume City Council  Northern Metropolitan         5070.0"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2375,7 +2396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 33,
    "id": "4f956577",
    "metadata": {},
    "outputs": [],
@@ -2385,7 +2406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 34,
    "id": "bcf07b94",
    "metadata": {},
    "outputs": [],
@@ -2398,7 +2419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 35,
    "id": "bdec2739",
    "metadata": {},
    "outputs": [],
@@ -2411,7 +2432,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 36,
    "id": "1650c1ba",
    "metadata": {},
    "outputs": [],
@@ -2424,7 +2445,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 37,
    "id": "90a66dd5",
    "metadata": {},
    "outputs": [
@@ -2453,7 +2474,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 37,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2464,7 +2485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 38,
    "id": "a82a747c",
    "metadata": {},
    "outputs": [],
@@ -2474,7 +2495,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 39,
    "id": "8e4c58e7",
    "metadata": {},
    "outputs": [],
